Replace List of additionalDirectories with McpServers as this is the parameter that NewSessionRequest(String cwd, List<Object> mcpServers) expects.
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>